deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-ui
spec:
  selector:
    app: shopping-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
