deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "shopping-ui.team-a-cluster.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-ui
                port:
                  number: 80
